--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A8FCFF"
+    android:background="#BFFFA8"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
